--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,9 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_black</item>
     </style>
 
 
@@ -20,7 +23,7 @@
 
     <!--toolBar的主题-->
     <style name="ToolbarTheme" parent="@style/AppTheme">
-        <item name="android:actionMenuTextColor">@color/text_black</item>
+        <item name="android:actionMenuTextColor">@color/text_black2</item>
         <item name="android:textSize">16sp</item>
     </style>
 
@@ -29,6 +32,11 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0.2dp</item>
         <item name="android:background">@color/line</item>
+    </style>
+
+    <!--自定义dialog主题-->
+    <style name="CustomDialogTheme" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowBackground">@color/transparent</item>
     </style>
 
 </resources>
