--- a/app/src/main/res/layout/activity_text_view.xml
+++ b/app/src/main/res/layout/activity_text_view.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ruiqin.customview.module.textview.TextViewActivity">
+    tools:context="com.ruiqin.customview.module.viewflipper.ViewFlipperActivity">
 
-    <ViewFlipper
-        android:id="@+id/viewFlipper"
+    <com.ruiqin.customview.module.viewflipper.view.CustomViewFlipper
+        android:id="@+id/customViewFlipper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
