可拖动图标

--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -5,6 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
+
     <Button
         android:id="@+id/btn_alertDialog"
         android:layout_width="wrap_content"
@@ -12,6 +16,10 @@
         android:layout_gravity="center_horizontal"
         android:text="alerDialog"
         android:textAllCaps="false"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
 
     <Button
         android:id="@+id/btn_custom_alertDialog"
@@ -21,7 +29,30 @@
         android:text="customAlerDialog"
         android:textAllCaps="false"/>
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
 
+
+    <Button
+        android:id="@+id/btn_custom_progressDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="progressDialog"
+        android:textAllCaps="false"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
+
+    <Button
+        android:id="@+id/btn_custom_loadingDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="loadingDialog"
+        android:textAllCaps="false"/>
 
 
 </LinearLayout>
